--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ h1 {
 
 .container-flow {
     display: grid;
-    width: 700px;
+    width: 800px;
+    padding: 0 50px;
     margin: 20px auto;
     grid-template-rows: 100px;
     grid-auto-flow: column;
@@ -32,8 +33,8 @@ h1 {
     width: 700px;
     margin: 20px auto;
     grid-template-columns: 200px 80%;
-    grid-template-rows: 100px 190px;
-    grid-auto-rows: 200px;
+    /* grid-template-rows: 190px; */
+    grid-auto-rows: 190px;
     padding-bottom: 5%;
 }
 
